--- a/geoguessrmini.html
+++ b/geoguessrmini.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Urlaubsfoto raten (OpenStreetMap)</title>
+  <title>GeoGuessr Mini - Vacation Edt. - Where was this photo taken?</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
